fix: allow code to auto wrap

--- a/aio/src/styles/2-modules/_api-pages.scss
+++ b/aio/src/styles/2-modules/_api-pages.scss
@@ -1,9 +1,11 @@
 .github-links {
   float: right;
+
   .material-icons {
     border-radius: 4px;
     padding: 4px;
     font-size: 20px;
+
     &:hover {
       background-color: $mist;
     }
@@ -26,14 +28,14 @@
     position: relative;
 
     code-example {
-        clear: left;
+      clear: left;
     }
   }
 
   .method-table, .option-table, .list-table {
     td > code {
       background-color: inherit;
-      white-space: pre;
+      white-space: normal;
     }
 
     .with-github-links {
@@ -44,6 +46,7 @@
       .github-links {
         a {
           color: $mediumgray;
+
           .material-icons:hover {
             background: none;
             color: $blue;
@@ -74,6 +77,7 @@
   .parameters-table {
     margin-top: 0;
     font-size: 14px;
+
     td:nth-child(1) {
       width: 20%;
     }
@@ -85,6 +89,7 @@
     summary {
       height: inherit;
       padding: 8px 12px;
+
       h4 {
         margin: 0;
         clear: left;
@@ -105,6 +110,7 @@
   .selector-list, .inherited-members-list {
     ul {
       padding: 0;
+
       li {
         list-style: none;
         margin-bottom: 12px;
@@ -115,6 +121,7 @@
   .selector-list {
     li, a {
       font-weight: bold;
+
       i {
         font-weight: normal;
       }
